fixed overflow y

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -166,6 +166,7 @@ nav {
     position: absolute;
     width: 100%;
     overflow-x: hidden !important;
+    overflow-x: hidden !important;
   }
 
   .nav-links {
